# vowser-mcp-server

./: .env  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  click_capture_safari.py  environment.yml  init.md  main.py  pyproject.toml  refactor.md  requirements.txt  requirements_mac.txt
.claude/: plan.md
app/: main.py
app/models/: contribution.py  path.py  root.py  step.py
app/services/: ai_module.py  db_setup.py  embedding_service.py  langgraph_service.py  neo4j_service.py
data/: README.md  __init__.py  korean_data_load_report.md  korean_test_data.json  korean_test_data.py  load_korean_data.py
docs/: DB_architecture.md  DB_refactor.md  DTO_API_DOCUMENTATION.md  LANGGRAPH_INTEGRATION.md  PATH_SEARCH_FLOW.md  PRD.md  SPRING_BOOT_INTEGRATION.md  TaskList.md  WEBSOCKET_API.md  async-architecture.md  fastapi-project-init.md  todolist.md
gov24_test/: gov24_test.py  requirements_gov24.txt  srt_reserve.py  srt_reserve2.py
learn/: KG_P2_01_news_analysis.ipynb
prototype/: V1.ipynb  gadungil.ipynb
scripts/: add_intent_embeddings.py  collect_and_save_gov24_new_path.py  collect_and_save_gov24_path.py  collect_and_save_srt_new_path.py  connect_root_to_steps_simple.py  migrate_old_to_new_db.py
test/: README.md  test.ipynb  test_request.json  test_single.py  test_websocket.py  websocket_test.html
test/fixtures/: test_data.py
